[form] category update form implementation